--- a/ObjectViewer/ObjectViewer.csproj
+++ b/ObjectViewer/ObjectViewer.csproj
@@ -58,7 +58,15 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="formOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+	<Compile Include="formOptions.designer.cs">
+      <DependentUpon>formOptions.cs</DependentUpon>
+    </Compile>
     <Compile Include="FunctionScripts.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="System\GameWindow.cs" />
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Parsers\AnimatedObjectParser.cs" />
     <Compile Include="Parsers\CsvB3dObjectParser.cs" />
@@ -76,6 +84,7 @@
     <Compile Include="RendererS.cs" />
     <Compile Include="System\FileSystem.cs" />
     <Compile Include="TextureManager.cs" />
+    <Compile Include="Timers.cs" />
     <Compile Include="TrainManagerS.cs" />
     <Compile Include="WorldS.cs" />
   </ItemGroup>
@@ -83,12 +92,13 @@
     <Reference Include="OpenBveApi">
       <HintPath>..\openBVE\OpenBveApi\bin\Debug\OpenBveApi.dll</HintPath>
     </Reference>
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\opentk-develop\Binaries\OpenTK\Release\OpenTK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="Tao.OpenGl">
-      <HintPath>..\..\Tao.OpenGl.dll</HintPath>
-    </Reference>
     <Reference Include="Tao.Sdl">
       <HintPath>..\..\Tao.Sdl.dll</HintPath>
     </Reference>
@@ -96,6 +106,10 @@
   <ItemGroup>
     <EmbeddedResource Include="formMessages.resx">
       <DependentUpon>formMessages.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formOptions.resx">
+	<DependentUpon>formOptions.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
