--- a/openBVE/OpenBve/OpenBve.csproj
+++ b/openBVE/OpenBve/OpenBve.csproj
@@ -97,6 +97,9 @@
     <Compile Include="Graphics\Renderer\Overlays.cs" />
     <Compile Include="Graphics\Renderer\Structures.cs" />
     <Compile Include="Parsers\XMLParser.cs" />
+    <Compile Include="System\Input\ControlRepeats.cs" />
+    <Compile Include="System\Input\Keyboard.cs" />
+    <Compile Include="System\Input\ProcessControls.cs" />
     <Compile Include="System\Scripting.cs" />
     <Compile Include="System\Timer.cs" />
     <None Include="app.config" />
@@ -201,7 +204,7 @@
     <Compile Include="System\FileSystem.cs" />
     <Compile Include="System\ManagedContent.cs" />
     <Compile Include="System\Host.cs" />
-    <Compile Include="System\Joysticks.cs" />
+    <Compile Include="System\Input\Joysticks.cs" />
     <Compile Include="System\Plugins.cs" />
     <Compile Include="System\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
