More work on Loksim3D parser, now supports transparency for ls3dobj **These appear to be equivilant to a MeshBuilder** Change way the Route Info window is handled to live in it's own appdomain.

--- a/ObjectViewer/ObjectViewer.csproj
+++ b/ObjectViewer/ObjectViewer.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="FunctionScripts.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Parsers\Ls3DGrpParser.cs" />
     <Compile Include="Parsers\Ls3DObjectParser.cs" />
     <Compile Include="System\GameWindow.cs" />
     <Compile Include="ObjectManager.cs" />
