Stage changes to language files

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -143,6 +143,7 @@ add = Afegeix control
 remove = Elimina control
 import = Importa...
 export = Exporta...
+reset = Reset to defaults
 up = Mou amunt
 down = Mou avall
 selection = Funció seleccionada actualment
