--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -143,6 +143,7 @@ add = Hinzufügen
 remove = Entfernen
 import = Importieren...
 export = Exportieren...
+reset = Reset to defaults
 up = Nach oben
 down = Nach unten
 selection = Zur Zeit ausgewählter Befehl
