--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -142,6 +142,7 @@ add = Add control
 remove = Remove control
 import = Import...
 export = Export...
+reset = Reset to defaults
 up = Move up
 down = Move down
 selection = Currently selected command
