--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -143,6 +143,7 @@ add = Añadir
 remove = Eliminar
 import = Importar...
 export = Exportar...
+reset = Reset to defaults
 up = Mover arriba
 down = Mover abajo
 selection = Comando seleccionado
