--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -142,6 +142,7 @@ add = Lisää ohjain
 remove = Poista ohjain
 import = Tuo...
 export = Vie...
+reset = Reset to defaults
 up = Siirry ylöspäin
 down = Siirry alaspäin
 selection = Tämänhetkinen komento:
