--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -143,6 +143,7 @@ add = Ajouter
 remove = Enlever
 import = Importer...
 export = Exporter...
+reset = Reset to defaults
 up = Vers le haut
 down = Vers le bas
 selection = Commande actuellement sélectionnée
