--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -142,6 +142,7 @@ add = Hozzáadás
 remove = Eltávolítás
 import = Importálás...
 export = Exportálás...
+reset = Reset to defaults
 up = Mozgatás felfele
 down = Mozgatás lefele
 selection = Kiválasztott parancs
