--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -142,6 +142,7 @@ add = Aggiungi controllo
 remove = Rimuovi controllo
 import = Importa
 export = Esporta
+reset = Reset to defaults
 up = Sposta in alto
 down = Sposta in basso
 selection = Comando selezionato
