--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -142,6 +142,7 @@ add = コントロール追加
 remove = コントロール削除
 import = 読み込み...
 export = 書き出し...
+reset = Reset to defaults
 up = 上へ
 down = 下へ
 selection = 選択中
