--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -144,6 +144,7 @@ add = 명령 추가
 remove = 명령 제거
 import = 가져오기...
 export = 내보내기...
+reset = Reset to defaults
 up = 위로 이동
 down = 아래로 이동
 selection = 선택된 명령
