--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -142,6 +142,7 @@ add = Toevoegen
 remove = Verwijderen
 import = Importeren...
 export = Exporteren...
+reset = Reset to defaults
 up = Naar boven
 down = Naar beneden
 selection = Geselecteerde commando
