--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -143,6 +143,7 @@ add = Dodaj klawisz
 remove = Usuń Klawisz
 import = Import...
 export = Eksport...
+reset = Reset to defaults
 up = Przenieś wyżej
 down = Przenieś niżej
 selection = Aktualnie wybrana komenda
