--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -143,6 +143,7 @@ add = Adicionar controle
 remove = Remover controle
 import = Importar...
 export = Exportar...
+reset = Reset to defaults
 up = Para cima
 down = Para baixo
 selection = Comando selecionado
