--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -143,6 +143,7 @@ add = Adicionar controlo
 remove = Remover controlo
 import = Importar...
 export = Exportar...
+reset = Reset to defaults
 up = Para cima
 down = Para baixo
 selection = Comando actualmente seleccionado
