--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -143,6 +143,7 @@ add = Adauga control
 remove = Şterge control
 import = Importă...
 export = Exportă...
+reset = Reset to defaults
 up = Muta sus
 down = Muta jos
 selection = Comanda selectata în acest moment:
