--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -142,6 +142,7 @@ add = Добавить
 remove = Удалить
 import = Импортировать...
 export = Экспортировать...
+reset = Reset to defaults
 up = Вверх
 down = Вниз
 selection = Выбранная команда
