--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -148,6 +148,7 @@ add = Додати клавішу
 remove = Видалити клавішу
 import = Імпорт...
 export = Експорт...
+reset = Reset to defaults
 up = Перенести вгору
 down = Перенести донизу
 selection = Обране
