--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -143,6 +143,7 @@ add = Přidat prvek
 remove = Odebrat prvek
 import = Import...
 export = Export...
+reset = Reset to defaults
 up = Posun nahoru
 down = Posun dolu
 selection = Aktuálně vybraný příkaz
